crates/dag-macros/tests/ui/workflow_spill_duplicate.stderr
error: [DAG207] duplicate spill! for edge `trigger` -> `sink`
  --> tests/ui/workflow_spill_duplicate.rs:37:5
   |
37 |     spill!(trigger -> sink, tier = "remote");
   |     ^^^^^
